# netswitch

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: release.yml
netswitch-daemon/: Cargo.toml
netswitch-daemon/src/: check_ifaces.rs  check_ipc.rs  ipc.rs  main.rs  network.rs  routing.rs
netswitch-gui/: package-lock.json  package.json
netswitch-gui/src/: App.css  App.tsx
netswitch-gui/src-tauri/: Cargo.toml  tauri.conf.json
netswitch-gui/src-tauri/capabilities/: default.json
netswitch-gui/src-tauri/src/: lib.rs  main.rs
scripts/: build-production.sh  setup-daemon.ps1  setup-daemon.sh  uninstall-macos.sh
service/: com.netswitch.daemon.plist  netswitch-daemon.service
